refactoring to test securing workflows

--- a/.github/workflows/guardian-admin.yml
+++ b/.github/workflows/guardian-admin.yml
@@ -12,20 +12,25 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-name: 'guardian_apply'
+name: 'guardian_admin'
 
 on:
   workflow_call:
     inputs:
+      command:
+        description: 'COMMAND - The Terraform command to run including any arguments (this value is appended to the terraform command).'
+        required: true
+        type: string
+      number:
+        description: 'PR NUMBER - The Pull Request number to run the actions for (if blank, this runs for the default branch).'
+        type: string
       working_directory:
         type: string
+        default: '.'
       wif_provider:
         required: true
         type: string
       wif_service_account:
-        required: true
-        type: string
-      bucket_name:
         required: true
         type: string
       terraform_version:
@@ -37,34 +42,23 @@ on:
       lock_timeout:
         type: string
         default: '10m'
-      max_retries:
-        required: false
-        default: 5
-        type: number
-      base_retry_delay:
-        required: false
-        default: 2
-        type: number
-      max_retry_delay:
-        required: false
-        default: 60
-        type: number
-    secrets:
-      workflow_github_token:
-        required: false
 
 jobs:
-  apply:
-    if: ${{ github.event_name == 'pull_request' && github.event.pull_request.merged }}
+  admin:
     runs-on: 'ubuntu-latest'
-    permissions:
-      contents: 'read'
-      id-token: 'write'
-      pull-requests: 'write'
-
     steps:
       - name: 'Checkout'
         uses: 'actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c' # ratchet:actions/checkout@v3
+
+      - name: 'Mint Token'
+        id: 'mint-token'
+        uses: 'abcxyz/github-token-minter/.github/actions/mint-token@c6ea9b91e3e1df75a6e86dad8e5b0a0a45b42fec'
+        with:
+          wif_provider: '${{ vars.TOKEN_MINTER_WIF_PROVIDER }}'
+          wif_service_account: '${{ vars.TOKEN_MINTER_WIF_SERVICE_ACCOUNT }}'
+          service_audience: '${{ vars.TOKEN_MINTER_SERVICE_AUDIENCE }}'
+          service_url: '${{ vars.TOKEN_MINTER_SERVICE_URL }}'
+          requested_permissions: '{"repositories":["*"],"permissions":{"contents":"read"}}'
 
       - name: 'Authenticate to Google Cloud'
         uses: 'google-github-actions/auth@ef5d53e30bbcd8d0836f4288f5e50ff3e086997d' # ratchet:google-github-actions/auth@v1
@@ -72,16 +66,18 @@ jobs:
           workload_identity_provider: '${{ inputs.wif_provider }}'
           service_account: '${{ inputs.wif_service_account }}'
 
-      - name: 'Guardian Apply'
-        uses: 'abcxyz/guardian/.github/actions/apply@${{ github.job_workflow_sha }}' # match the sha for the reusable workflow
+      - name: 'Git Config'
+        run: |-
+          git config --global url."https://guardian-bot:${{ steps.mint-token.outputs.token }}@github.com".insteadOf "https://github.com"
+
+      - name: 'Guardian Admin'
+        uses: './.github/actions/admin'
         env:
-          GITHUB_TOKEN: '${{ secrets.workflow_github_token || github.token }}'
+          GITHUB_TOKEN: '${{ steps.mint-token.outputs.token }}'
         with:
+          command: '${{ inputs.command }}'
           working_directory: '${{ inputs.working_directory }}'
-          bucket_name: '${{ inputs.bucket_name }}'
+          number: '${{ inputs.number }}'
           terraform_version: '${{ inputs.terraform_version }}'
           protect_lockfile: '${{ inputs.protect_lockfile }}'
           lock_timeout: '${{ inputs.lock_timeout }}'
-          max_retries: '${{ inputs.max_retries }}'
-          base_retry_delay: '${{ inputs.base_retry_delay }}'
-          max_retry_delay: '${{ inputs.max_retry_delay }}'
