--- a/.github/workflows/guardian-apply.yml
+++ b/.github/workflows/guardian-apply.yml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-name: 'guardian_plan'
+name: 'guardian_apply'
 
 on:
   workflow_call:
@@ -49,21 +49,24 @@ on:
         required: false
         default: 60
         type: number
-    secrets:
-      workflow_github_token:
-        required: false
 
 jobs:
-  plan:
+  apply:
+    if: ${{ github.event_name == 'pull_request' && github.event.pull_request.merged }}
     runs-on: 'ubuntu-latest'
-    permissions:
-      contents: 'read'
-      id-token: 'write'
-      pull-requests: 'write'
-
     steps:
       - name: 'Checkout'
         uses: 'actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c' # ratchet:actions/checkout@v3
+
+      - name: 'Mint Token'
+        id: 'mint-token'
+        uses: 'abcxyz/github-token-minter/.github/actions/mint-token@c6ea9b91e3e1df75a6e86dad8e5b0a0a45b42fec'
+        with:
+          wif_provider: '${{ vars.TOKEN_MINTER_WIF_PROVIDER }}'
+          wif_service_account: '${{ vars.TOKEN_MINTER_WIF_SERVICE_ACCOUNT }}'
+          service_audience: '${{ vars.TOKEN_MINTER_SERVICE_AUDIENCE }}'
+          service_url: '${{ vars.TOKEN_MINTER_SERVICE_URL }}'
+          requested_permissions: '{"repositories":["*"],"permissions":{"contents":"read"}}'
 
       - name: 'Authenticate to Google Cloud'
         uses: 'google-github-actions/auth@ef5d53e30bbcd8d0836f4288f5e50ff3e086997d' # ratchet:google-github-actions/auth@v1
@@ -71,10 +74,14 @@ jobs:
           workload_identity_provider: '${{ inputs.wif_provider }}'
           service_account: '${{ inputs.wif_service_account }}'
 
-      - name: 'Guardian Plan'
-        uses: 'abcxyz/guardian/.github/actions/plan@${{ github.job_workflow_sha }}' # match the sha for the reusable workflow
+      - name: 'Git Config'
+        run: |-
+          git config --global url."https://guardian-bot:${{ steps.mint-token.outputs.token }}@github.com".insteadOf "https://github.com"
+
+      - name: 'Guardian Apply'
+        uses: './.github/actions/apply'
         env:
-          GITHUB_TOKEN: '${{ secrets.workflow_github_token || github.token }}'
+          GITHUB_TOKEN: '${{ steps.mint-token.outputs.token }}'
         with:
           working_directory: '${{ inputs.working_directory }}'
           bucket_name: '${{ inputs.bucket_name }}'
