--- a/.github/workflows/test-apply.yml
+++ b/.github/workflows/test-apply.yml
@@ -31,7 +31,7 @@ permissions:
 jobs:
   apply:
     if: ${{ github.event_name == 'pull_request' && github.event.pull_request.merged }}
-    uses: './.github/workflows/guardian-apply.yml'
+    uses: 'abcxyz/guardian/.github/workflows/guardian-apply.yml@5de614235f880fd1c798671b87a6f5c693bd3107'
     strategy:
       fail-fast: false
       matrix:
