--- a/.github/workflows/test-plan.yml
+++ b/.github/workflows/test-plan.yml
@@ -22,8 +22,6 @@ on:
       - 'reopened'
     branches:
       - 'main'
-    paths:
-      - 'terraform/**'
 
 permissions:
   contents: 'read'
@@ -32,7 +30,7 @@ permissions:
 
 jobs:
   plan:
-    uses: './.github/workflows/guardian-plan.yml'
+    uses: 'abcxyz/guardian/.github/workflows/guardian-plan.yml@5de614235f880fd1c798671b87a6f5c693bd3107'
     strategy:
       fail-fast: false
       matrix:
