--- a/.github/actions/admin/action.yml
+++ b/.github/actions/admin/action.yml
@@ -50,7 +50,7 @@ runs:
         echo "::error ::Guardian Admin can only be run from the default branch (${{ github.event.repository.default_branch }})."
         exit 1
 
-    - name: 'Permission'
+    - name: 'Validate Permission'
       shell: 'bash'
       working-directory: '${{ inputs.working_directory }}'
       run: |-
