--- a/.github/workflows/test-apply.yml
+++ b/.github/workflows/test-apply.yml
@@ -15,9 +15,7 @@
 name: 'test_guardian_apply'
 
 on:
-  pull_request:
-    types:
-      - 'closed'
+  push:
     branches:
       - 'main'
 
@@ -28,14 +26,12 @@ permissions:
 
 jobs:
   apply:
-    if: ${{ github.event_name == 'pull_request' && github.event.pull_request.merged }}
     uses: 'abcxyz/guardian/.github/workflows/guardian-apply.yml@5de614235f880fd1c798671b87a6f5c693bd3107'
     strategy:
       fail-fast: false
       matrix:
         working_directory:
-          - 'terraform/ci'
-          - 'terraform/projects'
+          - 'terraform'
     with:
       working_directory: '${{ matrix.working_directory }}'
       wif_provider: '${{ vars.GUARDIAN_WIF_PROVIDER }}'
