--- a/examples/guardian-plan.yml
+++ b/examples/guardian-plan.yml
@@ -13,7 +13,6 @@
 # limitations under the License.
 
 name: 'guardian_plan'
-run-name: 'Guardian Plan - PR #${{ github.event.pull_request.number }}'
 
 on:
   pull_request:
@@ -28,6 +27,10 @@ permissions:
   contents: 'read'
   id-token: 'write'
   pull-requests: 'write'
+
+# only one plan, per pr should run at a time
+concurrency:
+  group: '${{ github.workflow }}-${{ github.head_ref || github.ref }}'
 
 jobs:
   plan:
@@ -47,8 +50,8 @@ jobs:
       - name: 'Authenticate to Google Cloud'
         uses: 'google-github-actions/auth@ef5d53e30bbcd8d0836f4288f5e50ff3e086997d' # ratchet:google-github-actions/auth@v1
         with:
-          workload_identity_provider: 'YOUR_GUARDIAN_WIF_PROVIDER' # this can be provided via repository variables
-          service_account: 'YOUR_GUARDIAN_WIF_SERVICE_ACCOUNT' # this can be provided via repository variables
+          workload_identity_provider: '${{ vars.GUARDIAN_WIF_PROVIDER }}'
+          service_account: '${{ vars.GUARDIAN_WIF_SERVICE_ACCOUNT }}'
 
       # Optional: set git config for private modules if needed
       # - name: 'Git Config'
@@ -56,16 +59,16 @@ jobs:
       #     git config --global url."https://guardian-bot:${{ secrets.PAT_TOKEN }}@github.com".insteadOf "https://github.com"
 
       - name: 'Guardian Plan'
-        uses: 'abcxyz/guardian/.github/actions/plan@SHA' # TODO: pin this to the latest sha in the guardian repo
+        uses: 'abcxyz/guardian/.github/actions/plan@main' # TODO: pin this to the latest sha in the guardian repo
 
         # Optional: provide environment secrets for terraform providers
         # env:
         #   GITHUB_TOKEN: '${{ secrets.PAT_TOKEN }}'
-        #   GITHUB_OWNER: 'YOUR_ORG'
+        #   GITHUB_OWNER: 'YOUR_GITHUB_ORG'
 
         with:
           working_directory: '${{ matrix.working_directory }}'
-          bucket_name: 'YOUR_GUARDIAN_BUCKET_NAME' # this can be provided via repository variables
+          bucket_name: '${{ vars.GUARDIAN_BUCKET_NAME }}'
           terraform_version: '1.3.6'
 
           # Optional:
