--- a/examples/guardian-admin.yml
+++ b/examples/guardian-admin.yml
@@ -40,9 +40,7 @@ jobs:
       fail-fast: false
       matrix:
         working_directory:
-          - 'directory-1'
-          - 'directory-2'
-
+          - 'terraform' # TODO: update with repository working directories
     steps:
       - name: 'Checkout'
         uses: 'actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c' # ratchet:actions/checkout@v3
@@ -69,9 +67,10 @@ jobs:
 
         with:
           command: '${{ inputs.command }}'
-          working_directory: '${{ matrix.working_directory }}'
           number: '${{ inputs.number }}'
-          terraform_version: '1.3.6'
+          working_directory: '${{ matrix.working_directory }}'
+          terraform_version: '1.3.6' # TODO: update with required terraform version
+
 
           # Optional:
           # protect_lockfile: true # default true
