--- a/examples/guardian-apply.yml
+++ b/examples/guardian-apply.yml
@@ -35,9 +35,7 @@ jobs:
       fail-fast: false
       matrix:
         working_directory:
-          - 'directory-1'
-          - 'directory-2'
-
+          - 'terraform' # TODO: update with repository working directories
     steps:
       - name: 'Checkout'
         uses: 'actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c' # ratchet:actions/checkout@v3
@@ -65,7 +63,8 @@ jobs:
         with:
           working_directory: '${{ matrix.working_directory }}'
           bucket_name: '${{ vars.GUARDIAN_BUCKET_NAME }}'
-          terraform_version: '1.3.6'
+          terraform_version: '1.3.6' # TODO: update with required terraform version
+
 
           # Optional:
           # protect_lockfile: true # default true
