--- a/examples/guardian-plan.yml
+++ b/examples/guardian-plan.yml
@@ -15,7 +15,7 @@
 name: 'guardian_plan'
 
 on:
-  pull_request:
+  pull_request_target:
     types:
       - 'opened'
       - 'synchronize'
@@ -39,12 +39,12 @@ jobs:
       fail-fast: false
       matrix:
         working_directory:
-          - 'directory-1'
-          - 'directory-2'
-
+          - 'terraform' # TODO: update with repository working directories
     steps:
       - name: 'Checkout'
         uses: 'actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c' # ratchet:actions/checkout@v3
+        with:
+          ref: '${{ github.event.pull_request.head.ref }}'
 
       # required to upload terraform plan files to cloud storage
       - name: 'Authenticate to Google Cloud'
@@ -69,7 +69,8 @@ jobs:
         with:
           working_directory: '${{ matrix.working_directory }}'
           bucket_name: '${{ vars.GUARDIAN_BUCKET_NAME }}'
-          terraform_version: '1.3.6'
+          terraform_version: '1.3.6' # TODO: update with required terraform version
+
 
           # Optional:
           # protect_lockfile: true # default true
