--- a/.github/workflows/test-admin.yml
+++ b/.github/workflows/test-admin.yml
@@ -67,5 +67,5 @@ jobs:
         with:
           command: '${{ inputs.command }}'
           number: '${{ inputs.number }}'
-          working_directory: '${{ matrix.working_directory }}'
+          working_directory: 'terraform'
           terraform_version: '1.3.6'
