fix admin pr checkout token

--- a/.github/actions/admin/action.yml
+++ b/.github/actions/admin/action.yml
@@ -63,6 +63,8 @@ runs:
     - name: 'Checkout PR'
       if: ${{ inputs.number != '' }}
       shell: 'bash'
+      env:
+        GITHUB_TOKEN: '${{ github.token }}'
       run: |-
         gh pr checkout ${{ inputs.number }}
 
