--- a/.github/actions/plan/action.yml
+++ b/.github/actions/plan/action.yml
@@ -147,32 +147,55 @@ runs:
       run: |-
         cp ${{ env.OUT_FILENAME }} ${{ env.SUCCESS_FILENAME }}
 
+    - name: 'Setup Node'
+      uses: 'actions/setup-node@64ed1c7eab4cce3362f8c340dee64e5eaeef8f7c' # ratchet:actions/setup-node@v3
+      with:
+        node-version: '16'
+
+    - name: 'Install Google Cloud Storage SDK'
+      shell: 'bash'
+      run: |-
+        npm install @google-cloud/storage@~6.9.5
+
     - name: 'Upload Plan File'
       uses: actions/github-script@98814c53be79b1d30f795b907e553d8679345975 # ratchet:actions/github-script@v6
       env:
-        OUT_FILENAME: 'out_${{ github.run_id }}_${{ github.run_attempt }}.txt'
+        OUT_FILEPATH: '${{ inputs.working_directory }}/out_${{ github.run_id }}_${{ github.run_attempt }}.txt'
         GUARDIAN_PLAN_PREFIX: 'guardian-plans/${{ github.repository }}/${{ github.event.pull_request.number }}/${{ inputs.working_directory }}'
       with:
-        github-token: '${{ github.token }}'
-        retries: '${{ inputs.max_retries }}'
         script: |-
+          const fs = require("fs");
+          const { EOL } = require("os");
+
           try {
             const { Storage, IdempotencyStrategy } = require("@google-cloud/storage");
+            const bucketName = "${{inputs.bucket_name}}";
+            const fileName = "${{inputs.working_directory }}/tfplan.binary";
+            const destFileName = "${{env.GUARDIAN_PLAN_PREFIX }}/tfplan.binary";
+
             const storage = new Storage({
               retryOptions: {
                 autoRetry: true,
                 retryDelayMultiplier: 3,
                 totalTimeout: 500,
-                maxRetryDelay: `${{ inputs.max_retries }}`,
-                maxRetries: `${{ inputs.max_retry_delay }}`,
+                maxRetryDelay: "${{inputs.max_retry_delay}}",
+                maxRetries: "${{inputs.max_retries}}",
                 idempotencyStrategy: IdempotencyStrategy.RetryAlways,
               },
             });
-            await storage.bucket(bucketName).upload(`${{ inputs.working_directory }}/tfplan.binary`, {
-              destination: `${{ env.GUARDIAN_PLAN_PREFIX }}/tfplan.binary`,
-            });
+
+            await storage
+              .bucket(bucketName)
+              .upload(fileName, { destination: destFileName });
           } catch (err) {
-            core.setFailed("Failed to delete ");
+            const errString = JSON.stringify(err, undefined, 2);
+            const errorData = `# Upload Plan File${EOL}Error: ${errString}`;
+
+            fs.writeFileSync("${{ env.OUT_FILEPATH }}", errorData, { encoding: "utf8" });
+
+            core.error("Failed to upload plan file");
+            core.error(errString);
+            core.setFailed("Failed to upload plan file");
           }
 
     - name: 'Ensure Outfile'
