--- a/.github/workflows/test-apply.yml
+++ b/.github/workflows/test-apply.yml
@@ -36,6 +36,8 @@ jobs:
     steps:
       - name: 'Checkout'
         uses: 'actions/checkout@8f4b7f84864484a7bf31766abe9204da3cbe65b3' # ratchet:actions/checkout@v3
+        with:
+          fetch-depth: 2 # required to get diff between HEAD and HEAD-1
 
       - name: 'Guardian Directories'
         id: 'dirs'
