--- a/.github/workflows/test-plan.yml
+++ b/.github/workflows/test-plan.yml
@@ -42,7 +42,7 @@ jobs:
       - name: 'Checkout'
         uses: 'actions/checkout@8f4b7f84864484a7bf31766abe9204da3cbe65b3' # ratchet:actions/checkout@v3
         with:
-          fetch-depth: 2
+          fetch-depth: 2 # required to get diff between HEAD and HEAD-1
 
       - name: 'Guardian Directories'
         id: 'dirs'
@@ -51,6 +51,7 @@ jobs:
           detect_changes: 'true'
 
   plan:
+    if: ${{ needs.init.outputs.dirs != '[]' }}
     needs:
       - 'init'
     runs-on: 'ubuntu-latest'
@@ -61,8 +62,6 @@ jobs:
     steps:
       - name: 'Checkout'
         uses: 'actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c' # ratchet:actions/checkout@v3
-        with:
-          ref: '${{ github.event.pull_request.head.ref }}'
 
       - name: 'Mint Token'
         id: 'mint-token'
@@ -94,6 +93,7 @@ jobs:
           terraform_version: '1.3.6'
 
   plan_success:
+    if: ${{ always() }}
     needs:
       - 'plan'
     runs-on: 'ubuntu-latest'
@@ -104,8 +104,14 @@ jobs:
           echo "All plans successful!"
           exit 0
 
-      - name: 'Failure'
-        if: ${{ needs.plan.result != 'success' }}
+      - name: 'Indeterminate'
+        if: ${{ contains(fromJSON('["skipped", "cancelled"]'), needs.plan.result) }}
         run: |-
-          echo "Plan run has failures."
+          echo "::warning Plans were skipped or cancelled."
+          exit 0
+
+      - name: 'Failure'
+        if: ${{ needs.plan.result == 'failure' }}
+        run: |-
+          echo "::error Plan has one or more failures."
           exit 1
