--- a/examples/guardian-plan.yml
+++ b/examples/guardian-plan.yml
@@ -41,7 +41,8 @@ jobs:
       - name: 'Checkout'
         uses: 'actions/checkout@8f4b7f84864484a7bf31766abe9204da3cbe65b3' # ratchet:actions/checkout@v3
         with:
-          fetch-depth: 2
+          ref: '${{ github.event.pull_request.head.ref }}'
+          fetch-depth: 2 # required to get diff between HEAD and HEAD-1
 
       - name: 'Guardian Directories'
         id: 'dirs'
