--- a/.github/actions/plan/action.yml
+++ b/.github/actions/plan/action.yml
@@ -14,7 +14,7 @@
 
 name: 'Guardian Plan'
 description: |-
-  Use this acton to run a Terraform Plan process for pull requests.
+  Use this action to run a Terraform Plan process for pull requests.
 
 inputs:
   working_directory:
@@ -45,7 +45,7 @@ inputs:
     default: '60'
 
 runs:
-  using: composite
+  using: 'composite'
   steps:
     - name: 'Bootstrap Out File'
       shell: 'bash'
@@ -57,7 +57,7 @@ runs:
 
     - name: 'Start Comment'
       id: 'comment'
-      uses: actions/github-script@98814c53be79b1d30f795b907e553d8679345975 # ratchet:actions/github-script@v6
+      uses: 'actions/github-script@98814c53be79b1d30f795b907e553d8679345975' # ratchet:actions/github-script@v6
       with:
         github-token: '${{ github.token }}'
         retries: '${{ inputs.max_retries }}'
@@ -71,7 +71,7 @@ runs:
           return prComment.id;
 
     - name: 'Setup Terraform'
-      uses: abcxyz/secure-setup-terraform@78e3f2fdfb7ebf59ce42141f6dd93bdd65bf04ed # ratchet:abcxyz/secure-setup-terraform@v0.2.5
+      uses: 'abcxyz/secure-setup-terraform@78e3f2fdfb7ebf59ce42141f6dd93bdd65bf04ed' # ratchet:abcxyz/secure-setup-terraform@v0.2.5
       with:
         terraform_version: '${{ inputs.terraform_version }}'
         terraform_module_location: './${{ inputs.working_directory }}'
@@ -158,7 +158,7 @@ runs:
         npm install @google-cloud/storage@~6.9.5
 
     - name: 'Upload Plan File'
-      uses: actions/github-script@98814c53be79b1d30f795b907e553d8679345975 # ratchet:actions/github-script@v6
+      uses: 'actions/github-script@98814c53be79b1d30f795b907e553d8679345975' # ratchet:actions/github-script@v6
       env:
         OUT_FILEPATH: '${{ inputs.working_directory }}/out_${{ github.run_id }}_${{ github.run_attempt }}.txt'
         GUARDIAN_PLAN_PREFIX: 'guardian-plans/${{ github.repository }}/${{ github.event.pull_request.number }}/${{ inputs.working_directory }}'
@@ -209,7 +209,7 @@ runs:
 
     - name: 'Failure Comment'
       if: ${{ failure() }}
-      uses: actions/github-script@98814c53be79b1d30f795b907e553d8679345975 # ratchet:actions/github-script@v6
+      uses: 'actions/github-script@98814c53be79b1d30f795b907e553d8679345975' # ratchet:actions/github-script@v6
       env:
         OUT_FILENAME: 'out_${{ github.run_id }}_${{ github.run_attempt }}.txt'
       with:
@@ -234,7 +234,7 @@ runs:
 
     - name: 'Success Comment'
       if: ${{ success() }}
-      uses: actions/github-script@98814c53be79b1d30f795b907e553d8679345975 # ratchet:actions/github-script@v6
+      uses: 'actions/github-script@98814c53be79b1d30f795b907e553d8679345975' # ratchet:actions/github-script@v6
       env:
         SUCCESS_FILENAME: 'success_${{ github.run_id }}_${{ github.run_attempt }}.txt'
       with:
