--- a/examples/guardian-plan.yml
+++ b/examples/guardian-plan.yml
@@ -30,7 +30,7 @@ permissions:
 
 # only one plan, per pr should run at a time
 concurrency:
-  group: '${{ github.workflow }}-${{ github.head_ref || github.ref }}'
+  group: '${{ github.workflow }}-${{ github.event.pull_request.number }}-${{ github.head_ref || github.ref }}'
 
 jobs:
   init:
@@ -105,25 +105,13 @@ jobs:
 
   plan_success:
     if: ${{ always() }}
+    runs-on: 'ubuntu-latest'
     needs:
       - 'init'
       - 'plan'
-    runs-on: 'ubuntu-latest'
     steps:
-      - name: 'Success'
-        if: ${{ needs.init.result == 'success' && needs.plan.result == 'success' }}
-        run: |-
-          echo "All plans successful!"
-          exit 0
-
-      - name: 'Failure'
-        if: ${{ needs.init.result == 'failure' || needs.plan.result == 'failure' }}
-        run: |-
-          echo "::error ::Plan has one or more failures."
-          exit 1
-
-      - name: 'Indeterminate'
-        if: ${{ contains(fromJSON('["skipped", "cancelled"]'), needs.init.result) || contains(fromJSON('["skipped", "cancelled"]'), needs.plan.result) }}
-        run: |-
-          echo "::warning ::Init or Plan was skipped or cancelled."
-          exit 0
+      - name: 'Guardian Post Plan Status'
+        uses: 'abcxyz/guardian/.github/actions/plan-status@main' # TODO: pin this to the latest sha in the guardian repo
+        with:
+          init_result: '${{ needs.init.result }}'
+          plan_result: '${{ needs.plan.result }}'
